--- a/css/style.css
+++ b/css/style.css
@@ -163,6 +163,9 @@ p {
 .info-icon {
   margin-right: 10px;
   fill: var(--secondary-text-color);
+  transition-property: fill;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .info-footer:hover,
 .top-line:hover,
@@ -399,6 +402,9 @@ p {
 .icon-team {
   display: block;
   fill: var(--icons-color);
+  transition-property: fill;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* title-customers----------Постоянные клиенты */
@@ -441,6 +447,9 @@ p {
 }
 .icon-customers {
   fill: var(--icons-color);
+  transition-property: fill;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .customers-link:hover .icon-customers,
 .customers-link:focus .icon-customers {
@@ -644,7 +653,7 @@ p {
   position: relative;
   overflow: hidden;
 }
-.portfolio-box-overlay:hover .overlay {
+.portfolio-box-link:hover .overlay {
   transform: translatex(0);
 }
 .overlay {
@@ -669,6 +678,9 @@ p {
 }
 .portfolio-box-link {
   display: block;
+  transition-property: box-shadow;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .portfolio-box-content {
   padding: 20px 24px;
